change style to fix odd layout on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,8 @@ header {
 }
 
 .name {
-  font-size: 1em;
   display: inline;
 }
-//Mobile
 @media (max-width: 600px) {
   .icons {
     flex-wrap: wrap;
